--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
-    "nodemon": "^3.0.1",
     "sequelize": "^6.32.1"
   },
   "name": "back-api-estudiantes",
@@ -18,5 +18,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
