--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "sequelize": "^6.32.1"
   },
   "name": "back-api-estudiantes",
-  "description": "Luego de clonar el archivo entrar a la terminal dentro de la carpeta raiz y usar: npm init -y",
+  "description": "Luego de clonar el archivo entrar a la terminal dentro de la carpeta raiz y usar: npm install",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
